[Fix]: Fix catalog flickering

--- a/catalog/view/theme/simplex/stylesheet/_main.scss
+++ b/catalog/view/theme/simplex/stylesheet/_main.scss
@@ -3041,6 +3041,7 @@ select {
         position : absolute;
         right    : 0;
         z-index  : -1;
+        width    : 90%;
       }
       
       > p {
